; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_da732x.c_da732x_get_input_div.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_da732x.c_da732x_get_input_div.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_soc_component = type { i32 }

@DA732X_MCLK_10MHZ = common dso_local global i32 0, align 4
@DA732X_MCLK_RET_0_10MHZ = common dso_local global i32 0, align 4
@DA732X_MCLK_VAL_0_10MHZ = common dso_local global i32 0, align 4
@DA732X_MCLK_20MHZ = common dso_local global i32 0, align 4
@DA732X_MCLK_RET_10_20MHZ = common dso_local global i32 0, align 4
@DA732X_MCLK_VAL_10_20MHZ = common dso_local global i32 0, align 4
@DA732X_MCLK_40MHZ = common dso_local global i32 0, align 4
@DA732X_MCLK_RET_20_40MHZ = common dso_local global i32 0, align 4
@DA732X_MCLK_VAL_20_40MHZ = common dso_local global i32 0, align 4
@DA732X_MCLK_54MHZ = common dso_local global i32 0, align 4
@DA732X_MCLK_RET_40_54MHZ = common dso_local global i32 0, align 4
@DA732X_MCLK_VAL_40_54MHZ = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@DA732X_REG_PLL_CTRL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_soc_component*, i32)* @da732x_get_input_div to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @da732x_get_input_div(%struct.snd_soc_component* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.snd_soc_component*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.snd_soc_component* %0, %struct.snd_soc_component** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* @DA732X_MCLK_10MHZ, align 4
  %10 = icmp slt i32 %8, %9
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load i32, i32* @DA732X_MCLK_RET_0_10MHZ, align 4
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* @DA732X_MCLK_VAL_0_10MHZ, align 4
  store i32 %13, i32* %7, align 4
  br label %53

14:                                               ; preds = %2
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* @DA732X_MCLK_10MHZ, align 4
  %17 = icmp sge i32 %15, %16
  br i1 %17, label %18, label %25

18:                                               ; preds = %14
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* @DA732X_MCLK_20MHZ, align 4
  %21 = icmp slt i32 %19, %20
  br i1 %21, label %22, label %25

22:                                               ; preds = %18
  %23 = load i32, i32* @DA732X_MCLK_RET_10_20MHZ, align 4
  store i32 %23, i32* %6, align 4
  %24 = load i32, i32* @DA732X_MCLK_VAL_10_20MHZ, align 4
  store i32 %24, i32* %7, align 4
  br label %52

25:                                               ; preds = %18, %14
  %26 = load i32, i32* %5, align 4
  %27 = load i32, i32* @DA732X_MCLK_20MHZ, align 4
  %28 = icmp sge i32 %26, %27
  br i1 %28, label %29, label %36

29:                                               ; preds = %25
  %30 = load i32, i32* %5, align 4
  %31 = load i32, i32* @DA732X_MCLK_40MHZ, align 4
  %32 = icmp slt i32 %30, %31
  br i1 %32, label %33, label %36

33:                                               ; preds = %29
  %34 = load i32, i32* @DA732X_MCLK_RET_20_40MHZ, align 4
  store i32 %34, i32* %6, align 4
  %35 = load i32, i32* @DA732X_MCLK_VAL_20_40MHZ, align 4
  store i32 %35, i32* %7, align 4
  br label %51

36:                                               ; preds = %29, %25
  %37 = load i32, i32* %5, align 4
  %38 = load i32, i32* @DA732X_MCLK_40MHZ, align 4
  %39 = icmp sge i32 %37, %38
  br i1 %39, label %40, label %47

40:                                               ; preds = %36
  %41 = load i32, i32* %5, align 4
  %42 = load i32, i32* @DA732X_MCLK_54MHZ, align 4
  %43 = icmp sle i32 %41, %42
  br i1 %43, label %44, label %47

44:                                               ; preds = %40
  %45 = load i32, i32* @DA732X_MCLK_RET_40_54MHZ, align 4
  store i32 %45, i32* %6, align 4
  %46 = load i32, i32* @DA732X_MCLK_VAL_40_54MHZ, align 4
  store i32 %46, i32* %7, align 4
  br label %50

47:                                               ; preds = %40, %36
  %48 = load i32, i32* @EINVAL, align 4
  %49 = sub nsw i32 0, %48
  store i32 %49, i32* %3, align 4
  br label %59

50:                                               ; preds = %44
  br label %51

51:                                               ; preds = %50, %33
  br label %52

52:                                               ; preds = %51, %22
  br label %53

53:                                               ; preds = %52, %11
  %54 = load %struct.snd_soc_component*, %struct.snd_soc_component** %4, align 8
  %55 = load i32, i32* @DA732X_REG_PLL_CTRL, align 4
  %56 = load i32, i32* %6, align 4
  %57 = call i32 @snd_soc_component_write(%struct.snd_soc_component* %54, i32 %55, i32 %56)
  %58 = load i32, i32* %7, align 4
  store i32 %58, i32* %3, align 4
  br label %59

59:                                               ; preds = %53, %47
  %60 = load i32, i32* %3, align 4
  ret i32 %60
}

declare dso_local i32 @snd_soc_component_write(%struct.snd_soc_component*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
